--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="./bootstrap-4/js/bootstrap.min.js"></script>
 
   <title>Apply</title>
   </head>
 
  <body>
+ <div class = "row row1">
+ 	<div class = "container-fluid">Row1</div>
+ </div>
+ <div class = "row row2">
+ 	<div class = "container-fluid">Row2</div>
+ </div>
+ <div class = "row row3">
+ 	<div class = "container-fluid col border border-top-0 border-light">
+ 		<div class = "col-header">WishList</div>
+ 	</div>
+ 	<div class = "container-fluid col border border-top-0 border-light">Col2</div>
+ 	<div class = "container-fluid col border border-top-0 border-light">Col3</div>
+ 	<div class = "container-fluid col border border-top-0 border-light">Col4</div>
+ </div>
+ </body>
   
 
 </html>
