--- a/index.html
+++ b/index.html
@@ -21,11 +21,21 @@
  </div>
  <div class = "row row3">
  	<div class = "container-fluid col border border-top-0 border-light">
- 		<div class = "col-header">WishList</div>
+ 		<div class = "p-3 rounded col-header">Pursuing</div>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
  	</div>
- 	<div class = "container-fluid col border border-top-0 border-light">Col2</div>
- 	<div class = "container-fluid col border border-top-0 border-light">Col3</div>
- 	<div class = "container-fluid col border border-top-0 border-light">Col4</div>
+ 	<div class = "container-fluid col border border-top-0 border-light">
+ 		<div class = "p-3 rounded col-header">Applied</div>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 	</div>
+ 	<div class = "container-fluid col border border-top-0 border-light">
+ 		<div class = "p-3 rounded col-header">Interview</div>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 	</div>
+ 	<div class = "container-fluid col border border-top-0 border-light">
+ 		<div class = "p-3 rounded col-header">Decision</div>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 	</div>
  </div>
  </body>
   
