--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="./bootstrap-4/js/bootstrap.min.js"></script>
+    <!--<script src="./bootstrap-4/js/bootstrap.min.js"></script>-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   <title>Apply</title>
   </head>
@@ -22,7 +26,7 @@
  <div class = "row row3">
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Pursuing</div>
- 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
  	</div>
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Applied</div>
@@ -35,6 +39,21 @@
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Decision</div>
  		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 	</div>
+
+ 	<div class="modal" id="myModal">
+ 		<div class="modal-dialog">
+ 			<div class="modal-content">
+ 				<div class="modal-header">
+ 					<h4 class="modal-title">Modal Heading</h4>
+ 					<button type="button" class="close" data-dismiss="modal">&times;</button>
+ 				</div>
+ 				<div class="modal-body">Modal body..</div>
+ 				<div class="modal-footer">
+ 					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+ 				</div>
+ 			</div>
+ 		</div>
  	</div>
  </div>
  </body>
