--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <!--<script src="./bootstrap-4/js/bootstrap.min.js"></script>-->
 
+    <script src="./test.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -18,27 +19,47 @@
 
  <body>
  <div class = "row row1">
- 	<div class = "container-fluid">Row1</div>
+ 	<div class = "container-fluid"></div>
  </div>
+
  <div class = "row row2">
- 	<div class = "container-fluid">Row2</div>
+  <div class = "text-center col-2" style="border-style: solid;">Dashboard</div>
+  <div class = "text-center col-2" style="border-style: solid;">Statistics</div>
+  <div class = "text-center col-2" style="border-style: solid;">ToDo</div>
  </div>
+
  <div class = "row row3">
- 	<div class = "container-fluid col border border-top-0 border-light">
+ 	
+  <div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Pursuing</div>
  		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
- 	</div>
+    
+    <div id="colCards">
+     <div class = "colCard">
+        <div class="card bg-primary">
+          <div class="card-body text-center">
+            <p class="card-text">Facebook</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Applied</div>
- 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
  	</div>
+
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Interview</div>
- 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
  	</div>
+
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Decision</div>
- 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark">+</button>
+ 		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
  	</div>
 
  	<div class="modal" id="myModal">
@@ -48,15 +69,27 @@
  					<h4 class="modal-title">Modal Heading</h4>
  					<button type="button" class="close" data-dismiss="modal">&times;</button>
  				</div>
- 				<div class="modal-body">Modal body..</div>
+ 				<div class="modal-body">
+          <div class = "col">Company Name
+            <input id = "CompanyName" type = "text" name = "Company-Name" value = "" placeholder=" Enter Company's Name">
+          </div>
+
+          <div class = "col">Position Title
+            <input id = "PositionTitle" type = "text" name = "Position-Title" value = "" placeholder=" Enter Position's Title">
+          </div>
+
+        </div>
  				<div class="modal-footer">
- 					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+ 					<button type="button" onclick = "createColCards()" class="btn btn-danger" data-dismiss="modal">Close</button>
  				</div>
  			</div>
  		</div>
  	</div>
+
  </div>
- </body>
+</body>
+
+
   
 
 </html>
