--- a/index.html
+++ b/index.html
@@ -50,26 +50,39 @@
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Applied</div>
  		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
+    <div id="colCards1"></div>
  	</div>
 
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Interview</div>
  		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
+    <div id="colCards2"></div>
  	</div>
 
  	<div class = "container-fluid col border border-top-0 border-light">
  		<div class = "p-3 rounded col-header">Decision</div>
  		<button type="button" class="col-buttons btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#myModal">+</button>
+    <div id="colCards3">
  	</div>
 
  	<div class="modal" id="myModal">
  		<div class="modal-dialog">
  			<div class="modal-content">
  				<div class="modal-header">
- 					<h4 class="modal-title">Modal Heading</h4>
+ 					<h4 class="modal-title">Company Portfolio</h4>
+          <div class="dropdown">
+            <button type="button" class="btn btn-sm btn-outline-info btn-primary dropdown-toggle" data-toggle="dropdown">Move To</button>
+            <div class="dropdown-menu">
+              <button type = "button" onclick="setColCardPos('colCards')" class="btn dropdown-item">Pursuing</a>
+              <button type = "button" onclick="setColCardPos('colCards1')" class="btn dropdown-item">Applied</a>
+              <button type = "button" onclick="setColCardPos('colCards2')" class="btn dropdown-item">Interview</a>
+              <button type = "button" onclick="setColCardPos('colCards3')" class="btn dropdown-item">Decision</a>
+            </div>
+          </div>
  					<button type="button" class="close" data-dismiss="modal">&times;</button>
  				</div>
  				<div class="modal-body">
+
           <div class = "col">Company Name
             <input id = "CompanyName" type = "text" name = "Company-Name" value = "" placeholder=" Enter Company's Name">
           </div>
@@ -80,7 +93,7 @@
 
         </div>
  				<div class="modal-footer">
- 					<button type="button" onclick = "createColCards()" class="btn btn-danger" data-dismiss="modal">Close</button>
+ 					<button type="button" onclick = "createColCards()" class="btn btn-danger" data-dismiss="modal">Add</button>
  				</div>
  			</div>
  		</div>
