--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="./node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="./node_modules/jquery/dist/jquery.slim.js" type="text/javascript"></script>
-    <script src="./node_modules/popper.js/dist/popper.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="./bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="./test.js"></script>
 
@@ -28,16 +28,22 @@
           <div class="modal-content">
             <div class="modal-header">
               <h4 class="modal-title">Company Portfolio</h4>
+
               <div class="dropdown">
+
                 <button id="MoveTo" type="button" class="btn btn-sm btn-outline-info btn-primary dropdown-toggle" data-toggle="dropdown">Move To (Pursuing)</button>
+
                 <div class="dropdown-menu">
                   <button type = "button" onclick="setColCardPos('Pursuing')" class="btn dropdown-item">Pursuing</button>
                   <button type = "button" onclick="setColCardPos('Applied')" class="btn dropdown-item">Applied</button>
                   <button type = "button" onclick="setColCardPos('Interview')" class="btn dropdown-item">Interview</button>
                   <button type = "button" onclick="setColCardPos('Decision')" class="btn dropdown-item">Decision</button>
                 </div>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+
               </div>
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+    
             </div>
 
             <div class="modal-body">
@@ -65,6 +71,7 @@
               <button id="colorButton" class="btn btn-outline-dark">Color</button>
               <button type="button" onclick = "createColCards()" class="btn btn-danger" data-dismiss="modal">Add</button>
             </div>
+
           </div>
         </div>
       </div>
