--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
 
-    
-
     <script src="./node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="./node_modules/jquery/dist/jquery.slim.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="./node_modules/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
     <script src="./bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="./test.js"></script>
 
@@ -31,7 +29,7 @@
 
               <div class="dropdown">
 
-                <button id="MoveTo" type="button" class="btn btn-sm btn-outline-info btn-primary dropdown-toggle" data-toggle="dropdown">Move To (Pursuing)</button>
+                <button id="MoveTo" type="button" class="btn btn-sm btn-outline-info btn-primary dropdown-toggle" data-toggle="dropdown">Move To</button>
 
                 <div class="dropdown-menu">
                   <button type = "button" onclick="setColCardPos('Pursuing')" class="btn dropdown-item">Pursuing</button>
@@ -68,7 +66,7 @@
             </div>
 
             <div class="modal-footer">
-              <button id="colorButton" class="btn btn-outline-dark">Color</button>
+              <button input type="color" id="colorButton" class="btn btn-outline-dark">Color</button>
               <button type="button" onclick = "createColCards()" class="btn btn-danger" data-dismiss="modal">Add</button>
             </div>
 
