--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
 
     <script src="./node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="./node_modules/jquery/dist/jquery.slim.js" type="text/javascript"></script>
     <script src="./node_modules/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
     <script src="./bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./node_modules/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script> 
     <script src="./test.js"></script>
 
   <title>Apply</title>
   </head>
 
   <body>
+
+    <div class="alert alert-success alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong>Do Not Give Up!</strong> You are almost there. 
+    </div>
+
     <div class = "row row1">
       <button id="AddPortfolio" type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#myModal">Add Company Portfolio</button>
 
@@ -66,7 +74,8 @@
             </div>
 
             <div class="modal-footer">
-              <button input type="color" id="colorButton" class="btn btn-outline-dark">Color</button>
+              <div>Select Color</div> 
+              <input id="colorPicker" type="text" class="form-control" value="rgb(255, 128, 0)"/>
               <button type="button" onclick = "createColCards()" class="btn btn-danger" data-dismiss="modal">Add</button>
             </div>
 
@@ -86,12 +95,8 @@
         <div class = "p-3 rounded col-header">Pursuing</div>
         
         <div id="Pursuing">
-          <div class = "colCard">
-            <button class="card colbtn bg-primary">
-              <div class="card-body text-center">
-                <p class="card-text">Facebook</p>
-              </div>
-            </button>
+          <div>
+            <button id="demo" class="colCard btn btn-primary">Demo</button>  
           </div>
         </div>
 
@@ -99,7 +104,11 @@
 
       <div class = "container-fluid col border border-top-0 border-light">
         <div class = "p-3 rounded col-header">Applied</div>
-        <div id="Applied"></div>
+        <div id="Applied">
+          <div>
+            <button id="demo1" class="colCard btn btn-primary">Demo1</button>  
+          </div>
+        </div>
       </div>
 
       <div class = "container-fluid col border border-top-0 border-light">
