--- a/index.html
+++ b/index.html
@@ -54,19 +54,23 @@
 
             <div class="modal-body">
               <div class = "col">
-                <div>Company Name
+                <div style="font-size: 15px; font-weight: bold">Company Name
                   <input id = "CompanyName" type = "text" name = "Company-Name" value = "" placeholder=" Enter Company's Name">
                 </div>
                 <br>
-                <div>Position Title
+                <div style="font-size: 15px; font-weight: bold">Position Title
                   <input id = "PositionTitle" type = "text" name = "Position-Title" value = "" placeholder=" Enter Position's Title">
                 </div>
                 <br>
-                <div>URL
+                <div style="font-size: 15px; font-weight: bold">URL
                   <input id = "URL" type = "url" name = "URL-Position" value = "" placeholder=" Enter Position's URL ">
                 </div>
                 <br>
-                <div>Notes</div>
+                <div style="font-size: 15px; font-weight: bold">Interview Date
+                  <input type="date" id="interviewDate">
+                </div>
+                <br>
+                <div style="font-size: 15px; font-weight: bold">Notes</div>
                 <textarea cols="50" id = "Notes" type = "text" name = "Notes-Portfolio" value = "" placeholder=" Enter Any Notes "></textarea> 
                 <br>
               </div>
@@ -105,9 +109,6 @@
       <div class = "container-fluid col border border-top-0 border-light">
         <div class = "p-3 rounded col-header">Applied</div>
         <div id="Applied">
-          <div>
-            <button id="demo1" class="colCard btn btn-primary">Demo1</button>  
-          </div>
         </div>
       </div>
 
