New Popup Window

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         
         <div id="Pursuing">
           <div>
-            <button id="demo" class="colCard btn btn-primary">Demo</button>  
+            <button type = "button"  onclick = "retreiveData()" id="demo" class="colCard btn btn-primary">Demo</button>
           </div>
         </div>
 
