--- a/index.html
+++ b/index.html
@@ -97,13 +97,8 @@
     <div class = "row row3">
       <div class = "container-fluid col border border-top-0 border-light">
         <div class = "p-3 rounded col-header">Pursuing</div>
-        
         <div id="Pursuing">
-          <div>
-            <button type = "button"  onclick = "retreiveData()" id="demo" class="colCard btn btn-primary">Demo</button>
-          </div>
         </div>
-
       </div>
 
       <div class = "container-fluid col border border-top-0 border-light">
@@ -122,6 +117,57 @@
         <div id="Decision"></div>
       </div>
     </div>
+
+    <div class="modal" id="myModal1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+
+
+          <div id='showCompanyPortfolioHeader'class="modal-header"> <!-- Modal Header -->
+            <h4 id="showCompanyName" class="modal-title">Company Portal</h4>
+            <button type="button" onclick = "resetModal()" class="close" data-dismiss="modal">&times;</button>
+          </div>
+
+          <div id="showCompanyPortfolioBody" class="modal-body"><!-- Modal body -->
+
+            <div id='showCompanyTitleBody' class="card">
+              <div class="card-body text-center" style="font-weight: bold; font-size: 15px;">Title
+                <p id="showCompanyTitle" class="card-text"style="font-weight: lighter; font-size: 13px;"></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-body text-center"style="font-weight: bold; font-size: 15px;">URL
+                <p id="showCompanyURL" class="card-text"style="font-weight: lighter; font-size: 13px;"></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-body text-center"style="font-weight: bold; font-size: 15px;">Notes
+                <p id="showCompanyNotes" class="card-text"style="font-weight: lighter; font-size: 13px;"></p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-body text-center"style="font-weight: bold; font-size: 15px;">Interview Date
+                <p id="showCompanyInterviewDate" class="card-text" style="font-weight: lighter; font-size: 13px;"></p>
+              </div>
+            </div>
+
+           
+          </div>
+
+          <div id='showCompanyPortfolioFooter'class="modal-footer"><!-- Modal footer -->
+            <button id='showCompanyPortfolioButton'class="btn btn-outline-info" onclick="showCompanyPortfolio()">Show</button>
+            <button id='remove'class="btn btn-outline-warning" onclick="removeCompany()">Remove</button>
+            <button type="button" onclick = "resetModal()"class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
 
   </body>
   </html>
