Added Graphs and styling

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
           </div>
         </div>
       </div>
-
     </div>
 
     <div class = "row row2">
@@ -98,25 +97,26 @@
       <div class="modal-dialog">
         <div class="modal-content">
 
-         <div class="modal-header"><!-- Modal Header -->
-          <h4 class="modal-title">Statistics</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-
-        <div class="modal-body"><!-- Modal body -->
-          <div class = "col row">
-            <canvas id="myChart" ></canvas>
+          <div class="modal-header">
+            <h4 class="modal-title">Statistics</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
-        </div>
 
-        <div class="modal-footer"><!-- Modal footer -->
-          <button onclick = "createChart()"type="button" class="btn btn-info">Show</button>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
+          <div class="modal-body">
+            <div class = "col row">
+              <canvas id="myChart" ></canvas>
+            </div>
+          </div>
 
+          <div class="modal-footer">
+            <button onclick = "createLineChart()"type="button" class="btn btn-info">Line Chart</button>
+            <button onclick = "createBarChart()"type="button" class="btn btn-info">Bar Chart </button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+
+        </div>
       </div>
     </div>
-  </div>
 
     <div class = "row row3">
       <div class = "container-fluid col border border-top-0 border-light">
