--- a/index.html
+++ b/index.html
@@ -210,7 +210,20 @@
 
 
           <div id='showCompanyPortfolioHeader'class="modal-header"> <!-- Modal Header -->
-            <h4 id="showCompanyName" class="modal-title">Company Portal</h4>
+            <div class = 'col-5'><h4 id="showCompanyName" class="modal-title">Company Portal</h4></div>
+
+            <div class="dropdown col-2">
+
+              <button id="MoveTo" type="button" class="btn btn-sm btn-outline-light customButtons dropdown-toggle" data-toggle="dropdown">Move To</button>
+
+              <div class="dropdown-menu">
+                <button type = "button" onclick="moveToNew('Pursuing')" class="btn dropdown-item">Pursuing</button>
+                <button type = "button" onclick="moveToNew('Applied')" class="btn dropdown-item">Applied</button>
+                <button type = "button" onclick="moveToNew('Interview')" class="btn dropdown-item">Interview</button>
+                <button type = "button" onclick="moveToNew('Decision')" class="btn dropdown-item">Decision</button>
+              </div>
+
+            </div>
             <button type="button" onclick = "resetModal()" class="close" data-dismiss="modal">&times;</button>
           </div>
 
